# LLM-Agentic-AI

./: 1_lab1.ipynb  2_lab2.ipynb  3_lab3.ipynb  5_lab5.ipynb  Notes.md  README.md  app.py  summary.txt
week 3/learn_english/: README.md  pyproject.toml
week 3/learn_english/src/: main.py
week 3/learn_english/src/learn_english/: crew.py  main.py
week 3/learn_english/src/learn_english/config/: agents.yaml  tasks.yaml
week 4/: app.py  sidekick.py  sidekick_tools.py
week 5/: Kuchnia_składniki.txt  Przepisy.txt  check.py  dietician.py  inventory_agent.py  main.py  moj_jadlospis.txt  safety_agent.py  shopping_agent.py  tools.py
week 6/day 2/: date_server.py  exercise_harder.py  test_client.py
week 6/day 3/: task.py
