[project]
name = "learn_english"
version = "0.1.0"
description = "learn_English using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.9.3"
]

[project.scripts]
learn_english = "learn_english.main:run"
run_crew = "learn_english.main:run"
train = "learn_english.main:train"
replay = "learn_english.main:replay"
test = "learn_english.main:test"
run_with_trigger = "learn_english.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
